# kerria

./: .dockerignore  .env-prod.gpg  .gitignore  Cargo.toml  Jenkinsfile  debug-docker-compose.yml  debug.Dockerfile  docker-compose.yml  release-docker-compose.yml  release.Dockerfile
migrations/: 20201029065934_create_brand.sql  20201029065937_create_product.sql  20201029080801_create_price_history.sql  20201029121707_create_hot_product.sql  20201215024826_create_admin_user.sql
scripts/: run_dev.sh
src/: lib.rs  main.rs
src/api/: admin.rs  cosmetics.rs  mod.rs  status.rs
src/environment/: jwt.rs  mod.rs
src/handlers/: admin.rs  cosmetics.rs
src/helpers/: problem.rs
src/models/: admin.rs  cosmetics.rs  mod.rs
src/sql/: admin.rs  cosmetics.rs  mod.rs
tests/: cosmetics.rs  test.http
