[package]
name = "kerria"
version = "0.1.0"
authors = ["ShuLiang <shuliang@live.cn>"]
edition = "2018"

[dependencies]
anyhow = "1.0.31"
thiserror = "1.0.20"
clap = "3.0.0-beta.2"
dotenv = "0.15.0"
tracing = "0.1.15"
tracing-subscriber = "0.2.7"
serde = "1.0.114"
serde_json = "1.0.56"
bincode = "1.3.1"
chrono = { version = "0.4.12", features = ["serde"] }
rand = "0.7.3"
tokio = { version = "0.2.21", features = ["full"] }
warp = "0.2.3"
http-api-problem = { version = "0.17.0", features = ["with-warp"] }
sqlx = { version = "0.4.0", features = [ "runtime-tokio-native-tls", "macros", "mysql", "chrono", "json", "decimal"] }
redis = { version = "0.17.0", default-features = false, features = [ "tokio-rt-core" ]}
hyper = "0.13.6"
listenfd = "0.3.3"
jsonwebtoken = "7.2.0"
rust-argon2 = "0.8.3"
